--- a/bathbodycare/src/css/newandnow.css
+++ b/bathbodycare/src/css/newandnow.css
@@ -21,13 +21,22 @@
     color: white;
 }
 .newAndNowMain > .newAndNowSideBr{
+    position: sticky;
+    top: 100px;
+    height: 50vh;
     display: flex;
     flex-direction: column;
-    gap: 10px;
     padding: 20px 10px;
     font-size: 13px;
-    width: 600px;
+    width: 250px;
     /* border: 1px solid black;; */
+}
+.newAndNowMain > .newAndNowSideBr select{
+    padding: 5px 10px;
+    background: none;
+    border: none;
+    outline: none;
+    border: 1px solid #333333;
 }
 .newAndNowMain > .newAndNowSideBr > h4{
     font-weight: 500;
@@ -43,7 +52,7 @@
     gap: 20px;
     /* border: 1px solid black; */
 }
-.newAndNowMain  > .newAndNowItems > a {
+.newAndNowMain  > .newAndNowItems > .newItemBox > a {
     display: flex;
     text-decoration: none;
     color: black;
@@ -52,7 +61,7 @@
     flex-direction: column;
     /* border: 1px solid black;; */
 }
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox{
+.newAndNowMain  > .newAndNowItems  > .newItemBox{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -61,34 +70,56 @@
     height: 100%;
     /* border: 1px solid red; */
 }
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > img{
+.newAndNowMain  > .newAndNowItems > .newItemBox > a img{
     width: 50%;
 }
 
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > .newItemDetails{
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails{
     text-align: center;
     width: 100%;;
     /* border: 1px solid black;; */
 }
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > .newItemDetails > h4{
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails > h4{
     font-weight: 500;
     /* font-size: 15px; */
 }
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > .newItemDetails > span{
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails > span{
     font-size: 12px;
 }
 
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > .newItemDetails > .newItemBtnbx{
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails > .newItemBtnbx{
     text-align: center;
     /* width: 90%; */
     margin-top: 10px;;
     /* border: 1px solid black; */
 }
-.newAndNowMain  > .newAndNowItems > a  > .newItemBox > .newItemDetails > .newItemBtnbx > button{
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails > .newItemBtnbx > button > a{
+    text-decoration: none;
+    color: white;
+}
+.newAndNowMain  > .newAndNowItems  > .newItemBox > .newItemDetails > .newItemBtnbx > button{
     background-color: #333333;
     padding: 5px 10px;
     cursor: pointer;
     color: white;
     width: 100%;
     border: none;
+}
+
+.newAndNowMain > .withoutLoad > h1{
+    padding: 10px 0;
+    font-weight: 400;
+    border-bottom: 1px solid black;
+}
+.newAndNowMain > .withoutLoad{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
+    /* background-color: red; */
+}
+.newAndNowMain > .withoutLoad > img{
+    width: 100%;
+    /* visibility: hidden; */
 }
